--- a/app/views/factory/products/_product.html.erb
+++ b/app/views/factory/products/_product.html.erb
@@ -27,7 +27,9 @@
     <%= form_with theme: nil, url: { controller: 'trade/my/carts', action: 'add' } do |f| %>
       <%= f.hidden_field :good_type, value: 'Factory::Production' %>
       <%= f.hidden_field :good_id, value: model.production.id %>
-      <%= f.submit '购买' %>
+      <button class="button">
+        <span class="icon is-small"><i class="fas fa-cart-plus fa-lg"></i></span>
+      </button>
     <% end %>
   </div>
 </div>
