--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -1,5 +1,5 @@
 <div class="weui-panel weui-panel_access">
-  <div class="weui-panel__hd">
+  <div class="weui-panel__hd" data-controller="sticky">
     <%= render 'breadcrumb' %>
   </div>
   <div class="weui-panel__bd">
