test with sticky

--- a/app/views/factory/products/_index/_breadcrumb.html+phone.erb
+++ b/app/views/factory/products/_index/_breadcrumb.html+phone.erb
@@ -1,5 +1,7 @@
+<div class="" data-controller="sticky">
 <span class="weui-btn weui-btn_mini weui-btn_default" data-controller="weui-dialog" data-weui-dialog-id-value="dialog" data-action="click->weui-dialog#toggle">商品列表</span>
 <% if params[:product_taxon_id] %>
   <i class="fas fa-angle-right"></i>
   <span><%= @product_taxon.name %></span>
 <% end %>
+</div>
