--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -1,6 +1,7 @@
+<%= render 'breadcrumb' %>
+
 <div class="weui-panel weui-panel_access">
-  <div class="weui-panel__hd" data-controller="sticky">
-    <%= render 'breadcrumb' %>
+  <div class="weui-panel__hd">
   </div>
   <div class="weui-panel__bd">
     <%= render 'filter_form' %>
