--- a/app/views/factory/product_taxons/index.html+phone.erb
+++ b/app/views/factory/product_taxons/index.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="weui-panel__hd">分类</div>
+<div class="weui-panel__hd"><%= t('.title') %></div>
 <%= render 'filter_form' %>
 <div class="weui-grids">
   <% @product_taxons.each do |product_taxon| %>
