--- a/app/views/factory/products/_index/_taxon.html.erb
+++ b/app/views/factory/products/_index/_taxon.html.erb
@@ -3,7 +3,7 @@
     <div class="weui-half-screen-dialog__hd">
       <div class="weui-half-screen-dialog__hd__side"></div>
       <div class="weui-half-screen-dialog__hd__main">
-        <div class="weui-half-screen-dialog__title">商品列表</div>
+        <div class="weui-half-screen-dialog__title"><%= t('factory.product_taxons.index.title') %></div>
       </div>
       <div class="weui-half-screen-dialog__hd__side">
         <button class="weui-icon-btn" data-action="weui-dialog#close">
