moved filter form

--- a/app/views/factory/products/show.html+phone.erb
+++ b/app/views/factory/products/show.html+phone.erb
@@ -3,7 +3,7 @@
   <%= f.hidden_field :product_plan_id, value: params[:product_plan_id] %>
 <% end %>
 
-<div class="slide" data-controller="slide">
+<div class="slide" data-controller="slide" data-slide-duration="1s">
   <% @product.covers.each_with_index do |cover, index| %>
     <%= render partial: 'figure', locals: { cover: cover, index: index } %>
   <% end %>
