--- a/app/views/factory/admin/parts/_index_thead.html.erb
+++ b/app/views/factory/admin/parts/_index_thead.html.erb
@@ -1,7 +1,7 @@
 <th>
   <%= Factory::Part.human_attribute_name(:part_taxon_id) %>
   <%= link_to({ controller: 'part_taxons' }, aria: { label: '分类设置' }) do %>
-    <i class="fas fa-cog"></i>
+    <i class="fa-light fa-cog"></i>
   <% end %>
 </th>
 <th><%= Factory::Part.human_attribute_name(:name) %></th>
