--- a/app/views/admin/_factory_nav.html.erb
+++ b/app/views/admin/_factory_nav.html.erb
@@ -6,8 +6,8 @@
     <%= link_to t('factory.admin.factory_taxons.index.title'), { controller: 'factory/admin/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') -%>
 <% end %>
   <a class="menu-label" data-action="menu#toggle">
-    <i class="fas fa-store fa-fw"></i>
+    <i class="fa-light fa-store fa-fw"></i>
     <span><%= t('factory.admin.title') %></span>
-    <i class="fas dropdown"></i>
+    <i class="fa-light dropdown"></i>
   </a>
 </div>
