--- a/app/views/factory/admin/addresses/_index_tbody.html.erb
+++ b/app/views/factory/admin/addresses/_index_tbody.html.erb
@@ -7,16 +7,16 @@
   <td><%= address.source %></td>
   <td>
     <%= link_to admin_address_path(address), aria: { label: t('.show') }, class: 'button is-small is-rounded is-light' do %>
-      <i class="fas fa-eye"></i>
+      <i class="fa-light fa-eye"></i>
     <% end %>
     <%= link_to admin_custom_trade_items_path(@custom, address_id: address.id), aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light' do %>
-      <i class="fas fa-shopping-cart"></i>
+      <i class="fa-light fa-shopping-cart"></i>
     <% end %>
     <%= link_to edit_admin_address_path(address), aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light' do %>
-      <i class="fas fa-pencil-alt"></i>
+      <i class="fa-light fa-pencil-alt"></i>
     <% end %>
     <%= link_to admin_address_path(address), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' do %>
-      <i class="fas fa-trash-alt"></i>
+      <i class="fa-light fa-trash-alt"></i>
     <% end %>
   </td>
 </tr>
