--- a/app/views/factory/admin/part_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_plans/_index_tbody.html.erb
@@ -8,13 +8,13 @@
   </td>
   <td>
     <%= link_to admin_part_plan_path(@part, part_plan), class: 'button' do %>
-      <i class="fas fa-info"></i>
+      <i class="fa-light fa-info"></i>
     <% end %>
     <%= link_to edit_admin_part_plan_path(@part, part_plan), class: 'button' do %>
-      <i class="fas fa-pencil-alt"></i>
+      <i class="fa-light fa-pencil-alt"></i>
     <% end %>
     <%= link_to({ action: 'destroy', id: part_plan }, method: :delete, data: { confirm: t('.confirm') }, class: 'button') do %>
-      <i class="fas fa-trash"></i>
+      <i class="fa-light fa-trash"></i>
     <% end %>
   </td>
 </tr>
