--- a/app/views/factory/admin/part_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_index_tbody.html.erb
@@ -1,9 +1,9 @@
 <td>
   <span style="width: <%= model.depth * 1.43 %>em; display: inline-block"></span>
   <% if !model.leaf? %>
-    <i class="fas fa-caret-right fa-fw" data-action="click->tree#collapse" style="cursor: pointer"></i>
+    <i class="fa-light fa-caret-right fa-fw" data-action="click->tree#collapse" style="cursor: pointer"></i>
   <% else %>
-    <i class="fas fa-minus fa-fw"></i>
+    <i class="fa-light fa-minus fa-fw"></i>
   <% end %>
   <span><%= model.name %></span>
 </td>
@@ -11,7 +11,7 @@
   <% if model.factory_taxon %>
     <%= link_to model.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: model.factory_taxon_id } %>
     <%= link_to({ action: 'import', id: model.id }, aria: { label: t('factory.admin.part_taxons.import.title') }) do %>
-      <i class="fas fa-sign-in-alt"></i>
+      <i class="fa-light fa-sign-in-alt"></i>
     <% end %>
   <% end %>
 </td>
