--- a/app/views/factory/admin/part_taxons/_product_tbody.html.erb
+++ b/app/views/factory/admin/part_taxons/_product_tbody.html.erb
@@ -1,6 +1,6 @@
 <td>
   <%= link_to({ action: 'productions', product_id: model.id }) do %>
-    <i class="fas fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree-remote#expand"></i>
+    <i class="fa-light fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree-remote#expand"></i>
   <% end %>
   <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
   <%= model.name %>
@@ -18,13 +18,13 @@
 </td>
 <td>
   <% if @select_ids.include?(model.id) %>
-    <i class="fas fa-check has-text-success"></i>
+    <i class="fa-light fa-check has-text-success"></i>
   <% else %>
-    <i class="fas fa-times has-text-gery"></i>
+    <i class="fa-light fa-times has-text-gery"></i>
   <% end %>
 </td>
 <td>
   <%= link_to({ controller: 'products', action: 'part', id: model.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fas fa-cube"></i>
+    <i class="fa-light fa-cube"></i>
   <% end %>
 </td>
