--- a/app/views/factory/admin/part_taxons/_product_tr.html.erb
+++ b/app/views/factory/admin/part_taxons/_product_tr.html.erb
@@ -4,10 +4,10 @@
     <turbo-frame>
       <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: model.id }, data: { turbo_frame: '_top' }, class: 'button is-small is-success' %>
       <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, data: { turbo_frame: '_top' }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-clone"></i>
+        <i class="fa-light fa-clone"></i>
       <% end %>
       <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-info"></i>
+        <i class="fa-light fa-info"></i>
       <% end %>
     </turbo-frame>
   </td>
