--- a/app/views/factory/admin/product_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_plans/_index_tbody.html.erb
@@ -11,16 +11,16 @@
   </td>
   <td>
     <%= link_to({ action: 'show', id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-eye"></i>
+      <i class="fa-light fa-eye"></i>
     <% end %>
     <%= link_to({ controller: 'customs', product_plan_id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-cube"></i>
+      <i class="fa-light fa-cube"></i>
     <% end %>
     <%= link_to({ action: 'edit', id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-pencil-alt"></i>
+      <i class="fa-light fa-pencil-alt"></i>
     <% end %>
     <%= link_to({ action: 'destroy', id: product_plan.id }, method: :delete, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fas fa-trash-alt"></i>
+      <i class="fa-light fa-trash-alt"></i>
     <% end %>
   </td>
 </tr>
