--- a/app/views/factory/admin/productions/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index_tbody.html.erb
@@ -23,12 +23,12 @@
 <td>
   <%= model.price.to_s(:currency, unit: '￥') %>
   <%= link_to({ action: 'price', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fas fa-dollar-sign"></i>
+    <i class="fa-light fa-dollar-sign"></i>
   <% end %>
 </td>
 <td>
   <%= link_to({ action: 'part', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fas fa-cube"></i>
+    <i class="fa-light fa-cube"></i>
   <% end %>
 </td>
 <td>
