--- a/app/views/factory/admin/productions/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index_tr.html.erb
@@ -3,22 +3,22 @@
   <td>
     <span data-show-target="item" style="visibility: hidden">
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-info"></i>
+        <i class="fa-light fa-info"></i>
       <% end %>
       <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-shopping-cart"></i>
+        <i class="fa-light fa-shopping-cart"></i>
       <% end %>
       <%= link_to({ controller: 'provideds', production_id: model.id }, aria: { label: t('factory.admin.provideds.index.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-hand-holding"></i>
+        <i class="fa-light fa-hand-holding"></i>
       <% end %>
       <%= link_to({ controller: 'addresses', production_id: model.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-map-marker-alt"></i>
+        <i class="fa-light fa-map-marker-alt"></i>
       <% end %>
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-pencil-alt"></i>
+        <i class="fa-light fa-pencil-alt"></i>
       <% end %>
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-trash-alt"></i>
+        <i class="fa-light fa-trash-alt"></i>
       <% end %>
     </span>
   </td>
