--- a/app/views/factory/admin/products/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index_tbody.html.erb
@@ -11,13 +11,13 @@
 </td>
 <td>
   <%= link_to({ controller: 'product_part_taxons', product_id: model.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fas fa-tree"></i>
+    <i class="fa-light fa-tree"></i>
   <% end %>
   <%= link_to({ controller: 'product_parts', product_id: model.id }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fas fa-cube"></i>
+    <i class="fa-light fa-cube"></i>
   <% end %>
   <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fas fa-clone"></i><span><%= model.productions_count %></span>
+    <i class="fa-light fa-clone"></i><span><%= model.productions_count %></span>
   <% end %>
   <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: model.id }, class: 'button is-small is-success' %>
 </td>
