--- a/app/views/factory/admin/products/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index_thead.html.erb
@@ -1,14 +1,14 @@
 <th>
   <%= Factory::Product.human_attribute_name(:product_taxon_id) %>
   <%= link_to({ controller: 'product_taxons' }, aria: { label: '分类设置' }) do %>
-    <i class="fas fa-cog"></i>
+    <i class="fa-light fa-cog"></i>
   <% end %>
 </th>
 <th><%= Factory::Product.human_attribute_name(:name) %></th>
 <th>
   <%= Factory::Product.human_attribute_name(:logo) %>
   <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
-    <i class="fas fa-cog"></i>
+    <i class="fa-light fa-cog"></i>
   <% end %>
 </th>
 <th><%= Factory::Product.human_attribute_name(:covers) %></th>
