--- a/app/views/factory/admin/provideds/_index_tr.html.erb
+++ b/app/views/factory/admin/provideds/_index_tr.html.erb
@@ -3,10 +3,10 @@
   <td>
     <span data-show-target="item" style="visibility: hidden">
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-pencil-alt"></i>
+        <i class="fa-light fa-pencil-alt"></i>
       <% end %>
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fas fa-trash-alt"></i>
+        <i class="fa-light fa-trash-alt"></i>
       <% end %>
     </span>
   </td>
