--- a/app/views/factory/admin/providers/index.html.erb
+++ b/app/views/factory/admin/providers/index.html.erb
@@ -5,7 +5,7 @@
       <th></th>
       <th>
         <%= link_to new_admin_provider_path, class: 'ui teal button' do %>
-          <i class="fas fa-plus"></i><%= t('.new') %>
+          <i class="fa-light fa-plus"></i><%= t('.new') %>
         <% end %>
       </th>
     </tr>
@@ -17,7 +17,7 @@
       <td><%= link_to '编辑', edit_admin_provider_path(provider) %></td>
       <td>
         <%= link_to admin_provider_path(provider), method: :delete, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' do %>
-          <i class="fas fa-trash-alt"></i>
+          <i class="fa-light fa-trash-alt"></i>
         <% end %>
       </td>
     </tr>
