--- a/app/views/factory/products/_show/_tab_bar.html.erb
+++ b/app/views/factory/products/_show/_tab_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="weui-tabbar weui-tabbar_fixed">
   <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'weui-tabbar__item') do %>
-    <i class="fa-light fa-shopping-cart weui-tabbar__icon">
+    <i class="fa-light fa-cart-shopping weui-tabbar__icon">
       <span class="weui-badge" style="right: 1em"><%= current_cart_count %></span>
     </i>
     <div class="weui-tabbar__label">购物车</div>
