--- a/app/views/factory/admin/addresses/_index_tbody.html.erb
+++ b/app/views/factory/admin/addresses/_index_tbody.html.erb
@@ -13,7 +13,7 @@
       <i class="fa-light fa-shopping-cart"></i>
     <% end %>
     <%= link_to edit_admin_address_path(address), aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light' do %>
-      <i class="fa-light fa-pencil-alt"></i>
+      <i class="fa-light fa-pencil"></i>
     <% end %>
     <%= link_to admin_address_path(address), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' do %>
       <i class="fa-light fa-trash-alt"></i>
