--- a/app/views/factory/admin/part_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_plans/_index_tbody.html.erb
@@ -11,7 +11,7 @@
       <i class="fa-light fa-info"></i>
     <% end %>
     <%= link_to edit_admin_part_plan_path(@part, part_plan), class: 'button' do %>
-      <i class="fa-light fa-pencil-alt"></i>
+      <i class="fa-light fa-pencil"></i>
     <% end %>
     <%= link_to({ action: 'destroy', id: part_plan }, method: :delete, data: { confirm: t('.confirm') }, class: 'button') do %>
       <i class="fa-light fa-trash"></i>
