--- a/app/views/factory/admin/product_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_plans/_index_tbody.html.erb
@@ -17,7 +17,7 @@
       <i class="fa-light fa-cube"></i>
     <% end %>
     <%= link_to({ action: 'edit', id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-pencil-alt"></i>
+      <i class="fa-light fa-pencil"></i>
     <% end %>
     <%= link_to({ action: 'destroy', id: product_plan.id }, method: :delete, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-light fa-trash-alt"></i>
