--- a/app/views/factory/admin/produce_plans/_show_table.html.erb
+++ b/app/views/factory/admin/produce_plans/_show_table.html.erb
@@ -1,16 +1,16 @@
 <tr>
-  <td class="has-text-right"><%= ProducePlan.human_attribute_name(:title) %></td>
+  <td class="has-text-right"><%= Factory::ProducePlan.human_attribute_name(:title) %></td>
   <td><%= @produce_plan.title %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= ProducePlan.human_attribute_name(:start_at) %></td>
+  <td class="has-text-right"><%= Factory::ProducePlan.human_attribute_name(:start_at) %></td>
   <td><time data-controller="time"><%= @produce_plan.start_at.to_s(:rfc822) %></time></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= ProducePlan.human_attribute_name(:finish_at) %></td>
+  <td class="has-text-right"><%= Factory::ProducePlan.human_attribute_name(:finish_at) %></td>
   <td><time data-controller="time"><%= @produce_plan.finish_at.to_s(:rfc822) %></time></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= ProducePlan.human_attribute_name(:state) %></td>
-  <td><%= @produce_plan.state %></td>
+  <td class="has-text-right"><%= Factory::ProducePlan.human_attribute_name(:state) %></td>
+  <td><%= @produce_plan.state_i18n %></td>
 </tr>
