--- a/app/views/factory/admin/addresses/_index_tbody.html.erb
+++ b/app/views/factory/admin/addresses/_index_tbody.html.erb
@@ -7,7 +7,7 @@
   <td><%= address.source %></td>
   <td>
     <%= link_to admin_address_path(address), aria: { label: t('.show') }, class: 'button is-small is-rounded is-light' do %>
-      <i class="fa-light fa-eye"></i>
+      <i class="fa-light fa-circle-info"></i>
     <% end %>
     <%= link_to admin_custom_trade_items_path(@custom, address_id: address.id), aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light' do %>
       <i class="fa-light fa-shopping-cart"></i>
@@ -16,7 +16,7 @@
       <i class="fa-light fa-pencil"></i>
     <% end %>
     <%= link_to admin_address_path(address), method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' do %>
-      <i class="fa-light fa-trash-alt"></i>
+      <i class="fa-light fa-trash"></i>
     <% end %>
   </td>
 </tr>
