--- a/app/views/factory/admin/part_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_plans/_index_tbody.html.erb
@@ -8,7 +8,7 @@
   </td>
   <td>
     <%= link_to admin_part_plan_path(@part, part_plan), class: 'button' do %>
-      <i class="fa-light fa-info"></i>
+      <i class="fa-light fa-circle-info"></i>
     <% end %>
     <%= link_to edit_admin_part_plan_path(@part, part_plan), class: 'button' do %>
       <i class="fa-light fa-pencil"></i>
