--- a/app/views/factory/admin/part_providers/_index_tr.html.erb
+++ b/app/views/factory/admin/part_providers/_index_tr.html.erb
@@ -3,7 +3,7 @@
   <td>
     <turbo-frame data-show-target="item" style="visibility: hidden">
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-trash-alt"></i>
+        <i class="fa-light fa-trash"></i>
       <% end %>
     </turbo-frame>
   </td>
