--- a/app/views/factory/admin/part_taxons/_product_tr.html.erb
+++ b/app/views/factory/admin/part_taxons/_product_tr.html.erb
@@ -7,7 +7,7 @@
         <i class="fa-light fa-clone"></i>
       <% end %>
       <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-info"></i>
+        <i class="fa-light fa-circle-info"></i>
       <% end %>
     </turbo-frame>
   </td>
