--- a/app/views/factory/admin/part_taxons/_production.html.erb
+++ b/app/views/factory/admin/part_taxons/_production.html.erb
@@ -31,7 +31,7 @@
   <td></td>
   <td>
     <%= link_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-info"></i>
+      <i class="fa-light fa-circle-info"></i>
     <% end %>
   </td>
 </tr>
