--- a/app/views/factory/admin/product_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_plans/_index_tbody.html.erb
@@ -11,7 +11,7 @@
   </td>
   <td>
     <%= link_to({ action: 'show', id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-eye"></i>
+      <i class="fa-light fa-circle-info"></i>
     <% end %>
     <%= link_to({ controller: 'customs', product_plan_id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
       <i class="fa-light fa-cube"></i>
@@ -20,7 +20,7 @@
       <i class="fa-light fa-pencil"></i>
     <% end %>
     <%= link_to({ action: 'destroy', id: product_plan.id }, method: :delete, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-trash-alt"></i>
+      <i class="fa-light fa-trash"></i>
     <% end %>
   </td>
 </tr>
