--- a/app/views/factory/admin/productions/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index_tr.html.erb
@@ -3,7 +3,7 @@
   <td>
     <span data-show-target="item" style="visibility: hidden">
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-info"></i>
+        <i class="fa-light fa-circle-info"></i>
       <% end %>
       <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-shopping-cart"></i>
@@ -18,7 +18,7 @@
         <i class="fa-light fa-pencil"></i>
       <% end %>
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-trash-alt"></i>
+        <i class="fa-light fa-trash"></i>
       <% end %>
     </span>
   </td>
