--- a/app/views/factory/products/_product.html.erb
+++ b/app/views/factory/products/_product.html.erb
@@ -28,7 +28,7 @@
       <%= f.hidden_field :good_type, value: 'Factory::Production' %>
       <%= f.hidden_field :good_id, value: model.production.id %>
       <button class="button is-danger">
-        <span class="icon is-small"><i class="fa-light fa-cart-plus fa-lg"></i></span>
+        <span class="icon is-small"><i class="fa-regular fa-cart-circle-plus fa-lg"></i></span>
       </button>
     <% end %>
   </div>
