--- a/app/views/factory/products/_product.html.erb
+++ b/app/views/factory/products/_product.html.erb
@@ -1,8 +1,8 @@
-<div class="weui-media-box weui-media-box_appmsg is-flex is-flex-direction-column">
+<div class="weui-media-box weui-media-box_appmsg">
   <%= link_to({ action: 'show', id: model.id }, class: 'weui-media-box__hd') do %>
     <%= image_tag model.logo, class: 'weui-media-box__thumb' if model.logo.attached? %>
   <% end %>
-  <%= link_to({ action: 'show', id: model.id }, class: 'weui-media-box__bd') do %>
+  <%= link_to({ action: 'show', id: model.id }, class: 'weui-media-box__bd is-flex is-flex-direction-column') do %>
     <h4 class="weui-media-box__title"><%= model.name %></h4>
     <p class="weui-media-box__desc pt-0">
       <%= model.description %>
