--- a/app/views/factory/products/_index/_taxon.html.erb
+++ b/app/views/factory/products/_index/_taxon.html.erb
@@ -1,7 +1,11 @@
 <div data-controller="weui-dialog" id="dialog" style="display: none; opacity: 0">
   <div class="weui-half-screen-dialog" data-weui-dialog-target="dialog">
     <div class="weui-half-screen-dialog__hd">
-      <div class="weui-half-screen-dialog__hd__side"></div>
+      <div class="weui-half-screen-dialog__hd__side">
+        <%= link_to({ action: 'index' }, class: 'weui-icon-btn') do %>
+          <i class="weui-icon-back-circle has-text-info"></i>
+        <% end %>
+      </div>
       <div class="weui-half-screen-dialog__hd__main">
         <div class="weui-half-screen-dialog__title"><%= t('factory.product_taxons.index.title') %></div>
       </div>
