--- a/app/views/factory/products/_product.html.erb
+++ b/app/views/factory/products/_product.html.erb
@@ -17,7 +17,7 @@
     <div class="has-text-danger">
       <%= model.min_price.to_money.format(html_wrap: true).html_safe %>
       <% if model.min_price != model.max_price %>
-        <span class="has-text-grey">-</span>
+        <span class="has-text-grey">~</span>
         <%= model.max_price.to_money.format(html_wrap: true).html_safe %>
       <% end %>
     </div>
