--- a/app/views/factory/admin/productions/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index_tbody.html.erb
@@ -17,11 +17,11 @@
 <td><%= model.state %></td>
 <td><%= model.qr_code %></td>
 <td class="has-text-right">
-  <p><%= model.cost_price.to_s(:currency, unit: '￥') %></p>
-  <p><%= model.profit_price.to_s(:currency, unit: '￥') %></p>
+  <p><%= model.cost_price.to_money.format(html_wrap: true).html_safe %></p>
+  <p><%= model.profit_price.to_money.format(html_wrap: true).html_safe %></p>
 </td>
 <td>
-  <%= model.price.to_s(:currency, unit: '￥') %>
+  <%= model.price.to_money.format(html_wrap: true).html_safe %>
   <%= link_to({ action: 'price', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-dollar-sign"></i>
   <% end %>
