--- a/app/views/panel/_factory_nav.html.erb
+++ b/app/views/panel/_factory_nav.html.erb
@@ -3,8 +3,8 @@
     <%= link_to t('factory.panel.factory_taxons.index.title'), { controller: 'factory/panel/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
   <% end %>
   <a class="menu-label" data-action="menu#toggle">
-    <i class="fa-light fa-store fa-fw"></i>
+    <i class="fa-solid fa-store fa-fw"></i>
     <span><%= t('factory.panel.title') %></span>
-    <i class="fa-light dropdown"></i>
+    <i class="fa-solid dropdown"></i>
   </a>
 </div>
