--- a/app/views/factory/admin/produce_plans/_index_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_index_thead.html.erb
@@ -1,4 +1,5 @@
 <th><%= Factory::ProducePlan.human_attribute_name(:title) %></th>
+<td><%= Factory::ProducePlan.human_attribute_name(:created_at) %></td>
 <th>
   <p><%= Factory::ProducePlan.human_attribute_name(:start_at) %></p>
   <p><%= Factory::ProducePlan.human_attribute_name(:finish_at) %></p>
