--- a/app/views/factory/admin/produce_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index_tbody.html.erb
@@ -1,4 +1,5 @@
 <td><%= model.title %></td>
+<td><time data-controller="time"><%= model.created_at.to_s(:rfc822) %></time></td>
 <td>
   <p data-controller="time"><%= model.start_at.to_s(:rfc822) %></p>
   <p data-controller="time"><%= model.finish_at.to_s(:rfc822) %></p>
