--- a/app/views/factory/admin/product_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_plans/_index_tbody.html.erb
@@ -1,26 +1,10 @@
-<tr>
-  <td><%= product_plan.produce_plan&.title %></td>
-  <td>
-    <p><time data-controller="time"><%= product_plan.start_at.to_s(:rfc822) %></time></p>
-    <p><time data-controller="time"><%= product_plan.finish_at.to_s(:rfc822) %></time></p>
-  </td>
-  <td><%= product_plan.state_i18n %></td>
-  <td><%= product_plan.planned_count %></td>
-  <td>
-    <%= link_to product_plan.produced_count, admin_product_items_path(@product, product_plan_id: product_plan.id) %>
-  </td>
-  <td>
-    <%= link_to({ action: 'show', id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-circle-info"></i>
-    <% end %>
-    <%= link_to({ controller: 'customs', product_plan_id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-cube"></i>
-    <% end %>
-    <%= link_to({ action: 'edit', id: product_plan.id }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-pencil"></i>
-    <% end %>
-    <%= link_to({ action: 'destroy', id: product_plan.id }, method: :delete, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-trash"></i>
-    <% end %>
-  </td>
-</tr>
+<td><%= model.produce_plan&.title %></td>
+<td>
+  <p><time data-controller="time"><%= model.start_at.to_s(:rfc822) %></time></p>
+  <p><time data-controller="time"><%= model.finish_at.to_s(:rfc822) %></time></p>
+</td>
+<td><%= model.state_i18n %></td>
+<td><%= model.planned_count %></td>
+<td>
+  <%= link_to model.produced_count, { controller: 'product_items', product_plan_id: model.id } %>
+</td>
