--- a/app/views/factory/products/_product.html.erb
+++ b/app/views/factory/products/_product.html.erb
@@ -26,8 +26,8 @@
     <%= form_with theme: nil, url: { controller: 'trade/my/carts', action: 'add' } do |f| %>
       <%= f.hidden_field :good_type, value: 'Factory::Production' %>
       <%= f.hidden_field :good_id, value: model.production.id %>
-      <button class="button is-danger">
-        <span class="icon is-small"><i class="fa-regular fa-cart-circle-plus fa-lg"></i></span>
+      <button class="button is-white">
+        <i class="fa-regular fa-cart-circle-plus fa-lg has-text-info-dark"></i>
       </button>
     <% end %>
   </div>
