--- a/app/views/factory/products/_product.html.erb
+++ b/app/views/factory/products/_product.html.erb
@@ -27,7 +27,7 @@
       <%= f.hidden_field :good_type, value: 'Factory::Production' %>
       <%= f.hidden_field :good_id, value: model.production.id %>
       <button class="button is-white">
-        <i class="fa-regular fa-cart-circle-plus fa-lg has-text-info-dark"></i>
+        <i class="fa-regular fa-circle-plus fa-lg has-text-info-dark"></i>
       </button>
     <% end %>
   </div>
