--- a/app/views/factory/products/_index/_tab_bar.html.erb
+++ b/app/views/factory/products/_index/_tab_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="weui-tabbar weui-tabbar_fixed">
   <div data-controller="weui-dialog" data-weui-dialog-id-value="dialog" data-action="click->weui-dialog#toggle" class="weui-tabbar__item">
-    <i class="fa-pot-food weui-tabbar__icon <%= active_helper(controllers: 'products', item: 'fa-light', active: 'fa-solid has-text-success fa-flash') %>"></i>
-    <div class="<%= active_helper(controllers: 'products', item: 'weui-tabbar__label', active: 'weui-tabbar__label has-text-success') %>"><%= t('factory.product_taxons.index.title') %></div>
+    <i class="fa-filter-list weui-tabbar__icon <%= active_helper(controllers: 'products', item: 'fa-light', active: 'fa-light') %>"></i>
+    <div class="<%= active_helper(controllers: 'products', item: 'weui-tabbar__label', active: 'weui-tabbar__label') %>"><%= t('factory.product_taxons.index.title') %></div>
   </div>
   <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'weui-tabbar__item') do %>
     <i class="fa-light fa-cart-shopping weui-tabbar__icon">
