--- a/app/views/factory/products/_index/_cart.html.erb
+++ b/app/views/factory/products/_index/_cart.html.erb
@@ -5,10 +5,6 @@
 <%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input' }) do |f| %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
 <% end if trade_item %>
-<%= form_with theme: nil, url: { controller: 'trade/my/carts', action: 'add' } do |f| %>
-  <%= f.hidden_field :good_type, value: model.class_name %>
-  <%= f.hidden_field :good_id, value: model.id %>
-  <button class="button is-white">
-    <i class="fa-regular fa-circle-plus fa-lg has-text-info-dark"></i>
-  </button>
+<%= button_to({ controller: 'trade/my/carts', action: 'add' }, params: { good_type: model.class_name, good_id: model.id }, class: 'ml-1') do %>
+  <i class="fa-regular fa-circle-plus fa-lg has-text-info-dark"></i>
 <% end %>
