--- a/app/views/factory/products/_index/_tab_bar.html.erb
+++ b/app/views/factory/products/_index/_tab_bar.html.erb
@@ -1,3 +1,3 @@
-<div class="weui-tabbar weui-tabbar_fixed weui-tabbar__primary">
+<div class="weui-tabbar weui-tabbar_float weui-tabbar__primary">
   <%= render 'tab_bar_item' %>
 </div>
