--- a/app/views/factory/products/_index/_tab_bar.html.erb
+++ b/app/views/factory/products/_index/_tab_bar.html.erb
@@ -1,3 +1,8 @@
-<div class="weui-tabbar weui-tabbar_float weui-tabbar__primary">
-  <%= render 'tab_bar_item' %>
+<div class="weui-tabbar_fixed">
+  <div class="level is-flex mb-0 has-background-white">
+    <%= render 'tab_bar_cart' %>
+  </div>
+  <div class="weui-tabbar">
+    <%= render 'tab_bar_item' %>
+  </div>
 </div>
