--- a/app/views/factory/products/_index/_tab_bar.html.erb
+++ b/app/views/factory/products/_index/_tab_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="weui-tabbar_fixed">
-  <div class="level is-flex mb-0 py-3 has-background-white">
+  <div class="level is-flex mb-0 pt-2 has-background-white">
     <%= render 'tab_bar_cart' %>
   </div>
   <div class="weui-tabbar">
