--- a/app/views/factory/admin/products/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index_thead.html.erb
@@ -18,5 +18,5 @@
   <p><%= Factory::Product.human_attribute_name(:min_price) %></p>
   <p><%= Factory::Product.human_attribute_name(:max_price) %></p>
 </th>
-<th></th>
+<th><%= Factory::Product.human_attribute_name(:enabled) %></th>
 <th></th>
