--- a/app/views/factory/products/_index/_tab_bar.html.erb
+++ b/app/views/factory/products/_index/_tab_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="weui-tabbar_fixed">
+<div data-controller="sticky" style="z-index: 3">
   <div class="level is-flex mb-0 pt-2 has-background-white">
     <%= render 'tab_bar_cart' %>
   </div>
