--- a/app/views/factory/products/_index/_tab_bar.html.erb
+++ b/app/views/factory/products/_index/_tab_bar.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="sticky" style="z-index: 3">
-  <div class="level is-flex mb-0 py-2 has-background-white">
+  <div class="level is-flex mb-0 py-2 has-background-white is-border-top">
     <%= render 'tab_bar_cart' %>
   </div>
   <div class="weui-tabbar">
