--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -1,12 +1,13 @@
 <%= render 'breadcrumb' %>
 
-<div class="weui-panel weui-panel_access mt-0">
-  <div class="weui-panel__bd">
-    <%= render 'filter_form' %>
-    <%= render partial: 'product', collection: @products, as: :model %>
+<div class="weui-flex">
+  <%= render 'menu' %>
+  <div class="weui-panel weui-panel_access mt-0 weui-flex__item">
+    <div class="weui-panel__bd">
+      <%= render partial: 'product', collection: @products, as: :model %>
+    </div>
+  
+    <%= paginate @products %>
   </div>
-
-  <%= paginate @products %>
 </div>
-
 <%= render 'taxon' %>
