--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -1,6 +1,6 @@
 <%= render 'breadcrumb' %>
 
-<div class="weui-flex">
+<div class="weui-flex is-align-items-flex-start">
   <%= render 'menu' %>
   <div class="weui-panel weui-panel_access mt-0 weui-flex__item">
     <div class="weui-panel__bd">
