--- a/app/views/factory/products/_index/_tab_bar.html.erb
+++ b/app/views/factory/products/_index/_tab_bar.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="sticky" style="z-index: 3">
+<div class="is-sticky" style="z-index: 3">
   <%= render 'tab_bar_cart' if current_cart %>
   <div class="weui-tabbar">
     <%= render 'tab_bar_item' %>
