--- a/app/views/factory/products/_index/_breadcrumb.html+phone.erb
+++ b/app/views/factory/products/_index/_breadcrumb.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="box is-radiusless p-2 mb-0 is-border-bottom" data-controller="sticky" style="z-index: 3">
+<div class="box is-radiusless p-2 mb-0 is-border-bottom is-sticky" style="z-index: 3">
   <span class="has-text-link has-text-weight-semibold" data-controller="weui-dialog" data-weui-dialog-id-value="dialog" data-action="click->weui-dialog#toggle">
     <i class="fa-light fa-filter-list"></i>
     <span class="pl-0"><%= t('factory.product_taxons.index.title') %></span>
