--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -2,12 +2,12 @@
 
 <div class="weui-flex is-align-items-flex-start">
   <%= render 'menu' %>
-  <div class="weui-panel weui-panel_access mt-0 weui-flex__item" data-controller="page">
-    <div class="weui-panel__bd">
+  <div class="weui-panel weui-panel_access mt-0 weui-flex__item" data-controller="page" data-page-debug-value="true" data-action="touchend->page#end:passive">
+    <div class="weui-panel__bd" id="container">
       <%= render partial: 'product', collection: @products, as: :model %>
     </div>
-  
-    <%= paginate @products %>
+
+    <%= render 'paginator' %>
   </div>
 </div>
 <%= render 'taxon' %>
