--- a/app/views/factory/products/index.turbo_stream.erb
+++ b/app/views/factory/products/index.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.append 'container', partial: 'product', collection: @products, as: :model %>
+<%= turbo_stream.replace 'container', partial: 'product', collection: @products, as: :model %>
