support is bottum

--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -6,6 +6,7 @@
     <div class="weui-panel__bd">
       <%= render partial: 'product', collection: @products, as: :model %>
       <%= render 'loading' %>
+      <%= render 'blank' %>
     </div>
 
     <%= render 'paginator' %>
