--- a/app/views/factory/admin/product_taxons/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index_tbody.html.erb
@@ -2,3 +2,10 @@
 <td><%= link_to model.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: model.factory_taxon_id }, text: true if model.factory_taxon %></td>
 <td><%= model.name %></td>
 <td><%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %></td>
+<td><%= model.products.where(enabled: true).count %></td>
+<th>
+  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
+    <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
+    <label data-action="click->input#check"></label>
+  <% end %>
+</th>
