--- a/app/views/factory/admin/product_taxons/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_index_thead.html.erb
@@ -3,3 +3,5 @@
 <th><%= Factory::ProductTaxon.human_attribute_name(:name) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:logo) %></th>
 <th></th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></th>
+<th></th>
