--- a/app/views/factory/products/_index/_tip.html.erb
+++ b/app/views/factory/products/_index/_tip.html.erb
@@ -1,3 +1,3 @@
-<div data-page-target="tip" class="weui-media-box weui-media-box_appmsg is-justify-content-center" style="display: none" id="tip">
-  <p class="has-text-centered has-text-grey">向上滑动加载</p>
-</div>
+<%= link_to({ page: @products.next_page }, data: { controller: 'common', action: 'common#link', page_target: 'tip' }, class: 'weui-media-box weui-media-box_appmsg is-justify-content-center', id: 'tip') do %>
+  <p class="has-text-centered has-text-grey">向上滑动或点击加载更多</p>
+<% end %>
