--- a/app/views/factory/admin/production_plans/_filter_form.html.erb
+++ b/app/views/factory/admin/production_plans/_filter_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'search', model: Factory::ProductPlan.new do |f| %>
+<%= form_with theme: 'search', model: Factory::ProductionPlan.new do |f| %>
   <div class="field-body">
     <%= f.date_field 'start_at-gte' %>
     <div class="field is-narrow">
