--- a/app/views/factory/admin/produce_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_index_tbody.html.erb
@@ -1,7 +1,3 @@
-<td><%= model.title %></td>
+<td><%= model.produce_on %></td>
 <td><time data-controller="time"><%= model.created_at.to_s(:rfc822) %></time></td>
-<td>
-  <p data-controller="time"><%= model.start_at.to_s(:rfc822) %></p>
-  <p data-controller="time"><%= model.finish_at.to_s(:rfc822) %></p>
-</td>
 <td><%= model.state %></td>
