--- a/app/views/factory/admin/production_plans/_edit_form.html.erb
+++ b/app/views/factory/admin/production_plans/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @product_plan, url: { action: 'update' } do |f| %>
+<%= form_with model: @production_plan, url: { action: 'update' } do |f| %>
   <%= render partial: 'form', locals: { f: f } %>
   <%= f.submit %>
 <% end %>
