--- a/app/views/factory/admin/production_plans/_form.html.erb
+++ b/app/views/factory/admin/production_plans/_form.html.erb
@@ -1,4 +1,6 @@
-<%= render 'error_messages', target: @product_plan %>
-<%= f.collection_select :produce_plan_id, @produce_plans, :id, :title %>
-<%= f.select :state, options_for_select(Factory::ProductionPlan.options_i18n(:state), @product_plan.state) %>
+<%= render 'error_messages', target: f.object %>
+<%= f.collection_select :scene_id, @scenes, :id, :title %>
+<%= f.select :state, options_for_select(Factory::ProductionPlan.options_i18n(:state), f.object.state) %>
 <%= f.number_field :planned_count, required: true %>
+<%= f.datetime_field :start_at, required: true %>
+<%= f.datetime_field :finish_at, required: true %>
