--- a/app/views/factory/admin/production_plans/_index_tr.html.erb
+++ b/app/views/factory/admin/production_plans/_index_tr.html.erb
@@ -7,7 +7,7 @@
       <% end %>
       <%= link_to({ controller: 'productions', product_plan_id: model.id }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-cube"></i>
-      <% end %>
+      <% end if false %>
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-pencil"></i>
       <% end %>
