--- a/app/views/factory/admin/production_plans/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_plans/_index_tbody.html.erb
@@ -1,10 +1,11 @@
 <td><%= model.scene&.title %></td>
+<td><%= model.produce_on %></td>
 <td>
   <p><time data-controller="time"><%= model.start_at.to_s(:rfc822) if model.start_at %></time></p>
   <p><time data-controller="time"><%= model.finish_at.to_s(:rfc822) if model.finish_at %></time></p>
 </td>
 <td><%= model.state_i18n %></td>
-<td><%= model.planned_count %></td>
 <td>
-  <%= link_to model.produced_count, { controller: 'production_items', production_plan_id: model.id } %>
+  <p><%= model.planned_count %></p>
+  <p><%= link_to model.produced_count, { controller: 'production_items', production_plan_id: model.id } %></p>
 </td>
